--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Project-Title",
+  "name": "certificate-insurance-and-verification",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
